2000-10-19  Takanori Saneto  <sanewo@ba2.so-net.ne.jp>

	* pgg-pgp.el (pgg-pgp-process-region): bind process-environment
	locally so that setenv's effect won't last forever.
	pgg-pgp5.el (pgg-pgp5-process-region): Ditto.

2000-10-16  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-process-multipart-1): Typo fix
	(mime-edit-beginning-tag-regxp).

2000-10-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.9 is released.

2000-10-13  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-force-text-tag): New macro.
	* mime-edit.el (mime-edit-insert-text-file):
	* mime-edit.el (mime-edit-insert-external):
	* mime-edit.el (mime-edit-insert-binary-string):
	* mime-edit.el (mime-edit-insert-binary-file):
	* mime-edit.el (mime-edit-process-multipart-1):
	* mime-edit.el (mime-edit-normalize-body):
	* mime-edit.el (mime-edit-enclose-region-internal):
	* mime-edit.el (mime-edit-insert-key): Use mime-edit-force-text-tag.

2000-10-12  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-insert-binary-string): Don't
	make a blank only part.
	(mime-edit-insert-binary-file): Ditto.
	(mime-edit-insert-text-file): Ditto.

2000-10-10  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-insert-place): Barf if on invisible region.
	(mime-edit-insert-tag): Ditto.

	* mime-edit.el (mime-edit-insert-file): Use
	detect-mime-charset-region.

2000-09-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-edit.el (mime-file-types): Fix to use application/msword
	instead of application/winword.

2000-08-04   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Don't bind
	coding-system-for-read.

2000-07-21  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.8 is released.

2000-07-11  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-pgp.el (mime-view-application/pgp): Setup local variable
	`mime-view-temp-message-buffer' of preview-buffer.
	(mime-view-application/pkcs7-mime): Likewise.
